Vertex Paint Vertex Selection category has wrong name in Input Preferences #54323

Closed
opened 2018-03-14 19:32:52 +01:00 by Ludvik Koutny · 6 comments
Contributor

System Information
Windows 10, GTX1080Ti

Blender Version
Broken: 2.79a
Worked: probably never

Short description of error
In input preferences, under 3D View category, there is Weight Paint and Weight Paint Vertex selection category, and Vertex Paint but no Vertex Paint selection category. The mesh element selection category for Vertex Paint is labeled as "Face Mask", with no implication that it is directly related to Vertex Paint mode, which can lead user to an assumption that Vertex Paint Mode face selection input mapping can not be customized.

**System Information** Windows 10, GTX1080Ti **Blender Version** Broken: 2.79a Worked: probably never **Short description of error** In input preferences, under 3D View category, there is Weight Paint and Weight Paint Vertex selection category, and Vertex Paint but no Vertex Paint selection category. The mesh element selection category for Vertex Paint is labeled as "Face Mask", with no implication that it is directly related to Vertex Paint mode, which can lead user to an assumption that Vertex Paint Mode face selection input mapping can not be customized.
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Ludvik Koutny changed title from Vertex Paint Vertex Selection category missing in Input Preferences to Vertex Paint Vertex Selection category has wrong name in Input Preferences 2018-03-14 19:34:52 +01:00
Member
Added subscribers: @WilliamReynish, @JulianEisel, @ideasman42, @lichtwerk
Philipp Oeser self-assigned this 2018-04-25 11:55:48 +02:00
Member

Face Mask is shared between Vertex Paint, Weight Paint and Texture Paint (can be used in all 3 modes), so imho it makes sense to have this separated.
It only handles face selections and has nothing to do with vertex selections (e.g. hiding or select linked are not for vertices).
For clarity, this could be named "Paint Face Mask (Vertex, Weight and Texture Paint)" in the UI.

Weight Paint Vertex Selection is available for Weight Paint and Vertex Paint, and I agree that should be reflected in the category names
For clarity, this could be named "Paint Vertex Mask (Vertex and Weight Paint)" in the UI.

Also the description of use_paint_mask_vertex is also still misleading, saying "Vertex selection masking for painting (weight paint only)"

I could work on a patch here, but would kindly ask @ideasman42 if there is anything speaking against that?
Also asking @WilliamReynish, @JulianEisel , would that be desireable?

`Face Mask` is shared between Vertex Paint, Weight Paint and Texture Paint (can be used in all 3 modes), so imho it makes sense to have this separated. It only handles face selections and has nothing to do with vertex selections (e.g. hiding or select linked are not for vertices). For clarity, this could be named "Paint Face Mask (Vertex, Weight and Texture Paint)" in the UI. `Weight Paint Vertex Selection` is available for Weight Paint **and** Vertex Paint, and I agree that should be reflected in the category names For clarity, this could be named "Paint Vertex Mask (Vertex and Weight Paint)" in the UI. Also the description of `use_paint_mask_vertex` is also still misleading, saying "Vertex selection masking for painting **(weight paint only)**" I could work on a patch here, but would kindly ask @ideasman42 if there is anything speaking against that? Also asking @WilliamReynish, @JulianEisel , would that be desireable?
Philipp Oeser was unassigned by Dalai Felinto 2019-12-23 16:36:18 +01:00

This issue was referenced by 4952fb1669

This issue was referenced by 4952fb1669fb7d254fc26a527b6dc2a44ac2c496
Member

Also the description of use_paint_mask_vertex is also still misleading, saying "Vertex selection masking for painting (weight paint only)"

Corrected, see 27adc4aa33

For the others, I made D6797: Fix #54323: Improve Paint category names in keymap preferences

> Also the description of use_paint_mask_vertex is also still misleading, saying "Vertex selection masking for painting (weight paint only)" Corrected, see 27adc4aa33 For the others, I made [D6797: Fix #54323: Improve Paint category names in keymap preferences](https://archive.blender.org/developer/D6797)
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2020-02-27 10:18:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54323
No description provided.