source/blender/editors/sculpt_paint/paint_ops.c
@@ -1062,7 +1062,7 @@ void ED_keymap_paint(wmKeyConfig *keyconf)
   keymap->poll = weight_paint_mode_poll;
 
   /*Weight paint's Vertex Selection Mode */
-  keymap = WM_keymap_ensure(keyconf, "Weight Paint Vertex Selection", 0, 0);
+  keymap = WM_keymap_ensure(keyconf, "Paint Vertex Selection (Weight, Vertex)", 0, 0);
   keymap->poll = vert_paint_poll;
 
   /* Image/Texture Paint mode */
@@ -1070,7 +1070,7 @@ void ED_keymap_paint(wmKeyConfig *keyconf)
   keymap->poll = image_texture_paint_poll;
 
   /* face-mask mode */
-  keymap = WM_keymap_ensure(keyconf, "Face Mask", 0, 0);
+  keymap = WM_keymap_ensure(keyconf, "Paint Face Mask (Weight, Vertex, Texture)", 0, 0);
   keymap->poll = facemask_paint_poll;
 
   /* paint stroke */
